--- a/app2/templates/aboutus.html
+++ b/app2/templates/aboutus.html
@@ -78,7 +78,7 @@
     <div class="team">
       <!-- Team Member 1 -->
       <div class="team-member">
-        <img src="{% static 'images/Priyanshu.jpg' %}" alt="Priyanshu Jaiswal">
+        <img src="app2/static/imagesPriyanshu.jpg" alt="Priyanshu Jaiswal">
         <h2>Priyanshu Jaiswal</h2>
         <p>Frontend and Backend Developer. <br>
           Priyanshu is responsible for designing and implementing the core functionality of the application, ensuring seamless integration between the frontend and backend systems.</p>
