--- a/app2/templates/aboutus.html
+++ b/app2/templates/aboutus.html
@@ -99,7 +99,7 @@
       </div>
       <!-- Team Member 4 -->
       <div class="team-member">
-        <img src="{% static 'images/PriyanshiT.jpg' %}" alt="Priyanshi Tomar">
+        <img src="https://github.com//Dragonix230//predictive-analytics//blob//main//app2//static//images//PriyanshiT.jpg" alt="Priyanshi Tomar">
         <h2>Priyanshi Tomar</h2>
         <p>Data Analyst.<br>
           Priyanshi analyzes and interprets complex datasets to derive meaningful insights that drive our forecasting models.</p>
