--- a/app2/templates/aboutus.html
+++ b/app2/templates/aboutus.html
@@ -78,35 +78,35 @@
     <div class="team">
       <!-- Team Member 1 -->
       <div class="team-member">
-        <img src="{% static 'images/Priyanshu.jpg' %}" alt="Priyanshu Jaiswal">
+        <img src="https://github.com/Dragonix230/predictive-analytics/blob/main/app2/static/images/Priyanshu.jpg" alt="Priyanshu Jaiswal">
         <h2>Priyanshu Jaiswal</h2>
         <p>Frontend and Backend Developer. <br>
           Priyanshu is responsible for designing and implementing the core functionality of the application, ensuring seamless integration between the frontend and backend systems.</p>
       </div>
       <!-- Team Member 2 -->
       <div class="team-member">
-        <img src="{% static 'images/PriyanshiP.jpg' %}" alt="Priyanshi Patel">
+        <img src="https://github.com/Dragonix230/predictive-analytics/blob/main/app2/static/images/PriyanshiP.jpg" alt="Priyanshi Patel">
         <h2>Priyanshi Patel</h2>
         <p>Frontend Developer. <br>
           Priyanshi focuses on creating an intuitive and user-friendly interface, ensuring a smooth and engaging experience for users.</p>
       </div>
       <!-- Team Member 3 -->
       <div class="team-member">
-        <img src="{% static 'images/IshanJ.jpg' %}" alt="Ishan Joshi">
+        <img src="https://github.com/Dragonix230/predictive-analytics/blob/main/app2/static/images/IshanJ.jpg" alt="Ishan Joshi">
         <h2>Ishan Joshi</h2>
         <p>Data Analyst. <br>
           Ishan analyzes and interprets complex datasets to derive meaningful insights that drive our forecasting models.</p>
       </div>
       <!-- Team Member 4 -->
       <div class="team-member">
-        <img src="{% static 'images/PriyanshiT.jpg' %}" alt="Priyanshi Tomar">
+        <img src="https://github.com/Dragonix230/predictive-analytics/blob/main/app2/static/images/PriyanshiT.jpg" alt="Priyanshi Tomar">
         <h2>Priyanshi Tomar</h2>
         <p>Data Analyst.<br>
           Priyanshi analyzes and interprets complex datasets to derive meaningful insights that drive our forecasting models.</p>
       </div>
       <!-- Team Member 5 -->
       <div class="team-member">
-        <img src="{% static 'images/AditiL.jpg' %}" alt="Aditi Lohiya">
+        <img src="https://github.com/Dragonix230/predictive-analytics/blob/main/app2/static/images/AditiL.jpg" alt="Aditi Lohiya">
         <h2>Aditi Lohiya</h2>
         <p>Aditi crafted our logo, developed engaging content, and curated captivating images and videos for our project. delivering high-quality visuals and compelling narratives that capture the essence of our project.</p>
       </div>
